@@ -56,7 +56,7 @@ public class PluginCollection {
     /**
      * List that holds all loaded plugins, enabled or disabled
      */
-    protected List<PlayPlugin> allPlugins = new ArrayList<>();
+    protected final List<PlayPlugin> allPlugins = new ArrayList<>();
 
     /**
      * Readonly copy of allPlugins - updated each time allPlugins is updated. Using this cached copy so we don't have to
@@ -67,7 +67,7 @@ public class PluginCollection {
     /**
      * List of all enabled plugins
      */
-    protected List<PlayPlugin> enabledPlugins = new ArrayList<>();
+    protected final List<PlayPlugin> enabledPlugins = new ArrayList<>();
 
     /**
      * Readonly copy of enabledPlugins - updated each time enabledPlugins is updated. Using this cached copy so we don't
@@ -78,7 +78,7 @@ public class PluginCollection {
     /**
      * List of all enabled plugins with filters
      */
-    protected List<PlayPlugin> enabledPluginsWithFilters = new ArrayList<>();
+    protected final List<PlayPlugin> enabledPluginsWithFilters = new ArrayList<>();
 
     /**
      * Readonly copy of enabledPluginsWithFilters - updated each time enabledPluginsWithFilters is updated. Using this
@@ -94,7 +94,7 @@ public class PluginCollection {
      * @return Read only list of plugins
      */
     protected List<PlayPlugin> createReadonlyCopy(List<PlayPlugin> list) {
-        return Collections.unmodifiableList(new ArrayList<>(list));
+        return List.copyOf(list);
     }
 
     private static class LoadingPluginInfo implements Comparable<LoadingPluginInfo> {
@@ -202,7 +202,7 @@ public class PluginCollection {
             String playPluginsDescriptors = Play.configuration.getProperty("play.plugins.descriptor");
             if (playPluginsDescriptors != null) {
                 return Stream.of(playPluginsDescriptors.split(","))
-                    .map(playPluginsDescriptor -> fileToUrl(playPluginsDescriptor))
+                    .map(this::fileToUrl)
                     .collect(toList());
             }
             return Collections.list(Play.classloader.getResources(play_plugins_resourceName));
@@ -236,7 +236,7 @@ public class PluginCollection {
             // Is this plugin an application-supplied-plugin?
             if (isLoadedByApplicationClassloader(plugin)) {
                 // This plugin is application-supplied - Must reload it
-                Class pluginClazz = Play.classloader.loadClass(plugin.getClass().getName());
+                Class<?> pluginClazz = Play.classloader.loadClass(plugin.getClass().getName());
                 PlayPlugin newPlugin = (PlayPlugin) Injector.getBeanOfType(pluginClazz);
                 newPlugin.index = plugin.index;
                 // Replace this plugin
@@ -458,7 +458,7 @@ public class PluginCollection {
             Iterator<PlayPlugin> itr = pluginsWithFilters.iterator();
             PlayPlugin.Filter<T> ret = itr.next().getFilter();
             while (itr.hasNext()) {
-                ret = ret.<T> decorate(itr.next().getFilter());
+                ret = ret.decorate(itr.next().getFilter());
             }
             return F.Option.Some(ret);
         }
